[package]
name = "regex-anre"
version = "2.0.1"
edition = "2024"

license = "MPL-2.0"
description = "Regex-anre is a full-featured, zero-dependency regular expression engine that supports both standard and ANRE regular expressions."
homepage = "https://github.com/hemashushu/anre"
repository = "https://github.com/hemashushu/anre"
keywords = ["regex", "regex-anre", "anre"]
categories = []

[dev-dependencies]
pretty_assertions = "1.4.0"
